force-app/main/default/objects/Account/fields/Previous_volunteer_date__c.field-meta.xml
<CustomField>
    <fullName>Previous_volunteer_date__c</fullName>
    <label>Previous volunteer date</label>
    <type>Date</type>
</CustomField>