force-app/main/default/objects/Account/fields/Previous_Volunteer_Period__c.field-meta.xml
<CustomField>
    <fullName>Previous_Volunteer_Period__c</fullName>
    <label>Previous Volunteer Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>