force-app/main/default/objects/Account/fields/Previous_Volunteer_Role__c.field-meta.xml
<CustomField>
    <fullName>Previous_Volunteer_Role__c</fullName>
    <label>Previous Volunteer Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>