force-app/main/default/objects/Account/fields/Public_Holiday_eve_diversion__c.field-meta.xml
<CustomField>
    <fullName>Public_Holiday_eve_diversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Holiday eve diversion</label>
    <type>Checkbox</type>
</CustomField>