force-app/main/default/objects/Account/fields/Qty_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Qty_Requirement__c</fullName>
    <label>Qty Requirement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>