force-app/main/default/objects/Account/fields/Quantity_Required__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Required__c</fullName>
    <label>Quantity Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>