force-app/main/default/objects/Account/fields/Reason_for_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Volunteering__c</fullName>
    <label>Reason for Volunteering</label>
    <length>100</length>
    <type>Text</type>
</CustomField>