force-app/main/default/objects/Account/fields/Recipient_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Org_ID__c</fullName>
    <label>Recipient Org ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>