force-app/main/default/objects/Account/fields/Signed_Indemnity_Letter__c.field-meta.xml
<CustomField>
    <fullName>Signed_Indemnity_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Indemnity Letter</label>
    <type>Checkbox</type>
</CustomField>