force-app/main/default/objects/Account/fields/Tax_Recipient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Full_Name__c</fullName>
    <label>Tax Recipient Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>