force-app/main/default/objects/Account/fields/Tax_Recipient_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_ID_Number__c</fullName>
    <label>Tax Recipient ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>