force-app/main/default/objects/Account/fields/UOM_1__c.field-meta.xml
<CustomField>
    <fullName>UOM_1__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bottles</fullName>
            </value>
            <value>
                <fullName>Cartons</fullName>
            </value>
            <value>
                <fullName>Copies</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Litres</fullName>
            </value>
            <value>
                <fullName>Metres</fullName>
            </value>
            <value>
                <fullName>Pkts</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>