force-app/main/default/objects/Account/fields/Volunteer_Id__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Id__c</fullName>
    <label>VID (Superbun)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>