force-app/main/default/objects/Account/fields/Volunteer_Skill__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skill__c</fullName>
    <label>Volunteer Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>