force-app/main/default/objects/Account/fields/Weekly_Occurance__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Occurance__c</fullName>
    <label>Weekly Occurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Every</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>