force-app/main/default/objects/Account/validationRules/Tax_Information_must_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Information_must_complete</fullName>
    <active>true</active>
    <description>If one of these fields: Id type is entered, id no and Tax recipient Full Name has value, then all fields must be complete</description>
    <errorConditionFormula>AND(
 OR( NOT( ISBLANK( TEXT( ID_Type__c ))), 
     NOT( ISBLANK( ID_No__c ))
 ),
 OR( ISBLANK( TEXT( ID_Type__c )),
     ISBLANK( ID_No__c )
 )
)</errorConditionFormula>
    <errorMessage>Please complete all fields: Id Type, Id No, and Tax Recipient Full Name, or leave them all blank</errorMessage>
</ValidationRule>